--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "daisyui": "^5.5.5",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
+    "swiper": "^12.0.3",
     "tailwindcss": "^4.1.17",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
